--- a/fonksiyonlar-010/fonksiyonlar-010.csproj
+++ b/fonksiyonlar-010/fonksiyonlar-010.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>fonksiyonlar_010</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
 </Project>
