--- a/2-BOLUM/OOP-giris-001-02/OOP-giris-001-02.csproj
+++ b/2-BOLUM/OOP-giris-001-02/OOP-giris-001-02.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>oop_practise_001</RootNamespace>
+    <RootNamespace>OOP_giris_001_02</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
