--- a/3-BOLUM/VeriTabanina-Baglanti(ADO)/VeriTabanina-Baglanti(ADO).csproj
+++ b/3-BOLUM/VeriTabanina-Baglanti(ADO)/VeriTabanina-Baglanti(ADO).csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.0-preview2.24304.8" />
+  </ItemGroup>
+
 </Project>
