--- a/4-BOLUM/MVC-002-Tailwind/package.json
+++ b/4-BOLUM/MVC-002-Tailwind/package.json
@@ -4,7 +4,8 @@
   "description": "- node ve npm yuklu olmali kotrol et",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tailwindcss -i ./wwwroot/css/input.css -o ./wwwroot/css/output.css --watch"
   },
   "keywords": [],
   "author": "",
