--- a/4-BOLUM/MVC-010(redis-odev)/MVC-010(redis-odev).csproj
+++ b/4-BOLUM/MVC-010(redis-odev)/MVC-010(redis-odev).csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>MVC_010_sessions_giris_</RootNamespace>
+    <RootNamespace>MVC_010_redis_odev_</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
