--- a/4-BOLUM/CALISMALAR/MVC-Project1/MVC-Project1.csproj
+++ b/4-BOLUM/CALISMALAR/MVC-Project1/MVC-Project1.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
